<resources>
    <string name="app_name">Skinology</string>
    <string name="skinology">SKINOLOGY</string>
    <string name="next">Lanjut  -></string>
    <string name="name_article">Judul</string>
    <string name="result">Berminyak 90%</string>
    <string name="date">2024–11–20 14:45:30</string>
    <string name="title_home">Beranda</string>
    <string name="title_article">Artikel</string>
    <string name="title_camera">Kamera</string>
    <string name="title_history">Riwayat</string>
    <string name="image_on_boarding">imageOnBoarding</string>
    <string name="onboarding_description">Skinology memberikan informasi mendalam tentang jenis kulit anda melalui artikel edukatif, serta analisis cerdas untuk perawatan kulit yang lebih efektif dan sesuai kebutuhan.</string>
    <string name="article_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="save">Simpan</string>
    <string name="text_type_skin">Tipe kulit anda:</string>
    <string name="skin_detection">Deteksi Type Kulit</string>
    <string name="recent_article">Artikel Terbaru</string>
    <string name="analyze">Analisis</string>
    <string name="time_to">Waktunya</string>
    <string name="know_your_skin">Mengenal Kulit Anda</string>
    <string name="version_1_0_0">Version: 1.0.0</string>
    <string name="app_description">Skinology adalah aplikasi inovatif berbasis teknologi yang dirancang untuk membantu pengguna dalam mengenali jenis kulit mereka secara cepat dan akurat. Menggunakan teknologi image classification berbasis kecerdasan buatan, Skinology mampu menganalisis foto kulit wajah pengguna untuk mengidentifikasi kondisi kulit</string>
    <string name="galery">Galeri</string>
    <string name="take_picture">Fotokan wajah Anda</string>
    <string name="this_time">Waktunya</string>
    <string name="mengenal_kulit_anda">Mengenal Kulit Anda</string>
    <string name="understanding_dry_skin">Understanding Dry Skin</string>
    <string name="des_skin">Dry skin is a common condition characterized by a lack of moisture in the outermost layer of the skin. It can cause discomfort, itching, and flaky patches. To prevent and treat dry skin, it\'s important to understand its causes and use the right skincare products…</string>
    <string name="to_know_more_about_your_skin_type">To Know More About Your Skin Type</string>
    <string name="kering">Kering</string>
    <string name="normal">Normal</string>
    <string name="berminyak">Berminyak</string>
    <string name="jerawat">Jerawat</string>
    <string name="tentang_kami">Tentang Kami</string>

</resources>